--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ button {
     display: none;
     /*display: block;*/
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: calc(50% - 200px);
     width: 400px;
     padding: 30px 40px;
@@ -214,18 +214,18 @@ button {
     width: 100%;
     position: absolute;
     overflow: auto;
-    top: 0;
-    /*left: calc(50% - 250px);*/
+    top: 100px;
     left: 0;
     animation: showLoginWindow 1s linear forwards;
     padding: 20px 15px;
     height: 100vh;
-    /*border: 1px solid #DD3142;*/
+}
+
+.login .logo {
+    margin-bottom: 40px;
 }
 
 .login__content {
-    /*position: relative;*/
-    /*overflow: hidden;*/
     padding: 0 20px;
 }
 
@@ -242,7 +242,7 @@ button {
 
 .login__content .content__form {
     width: 60%;
-    margin: 0 auto;
+    margin: 20px auto 0;
 }
 
 .login__content .content__form .input__item {
@@ -250,7 +250,7 @@ button {
 }
 
 .login__content .form__action {
-    margin-top: 40px;
+    margin-top: 70px;
 }
 
 .login__image img {
@@ -291,12 +291,11 @@ button {
 .container.container-third {
     display: none;
     /*display: block;*/
-    /*background: white;
-    background-size: contain;*/
     background: url("../img/image-transparent.png") 100px 200px no-repeat;
     background-size: contain;
     padding: 0 90px;
     height: 100vh;
+    top: 270px;
 }
 .account__image {
     position: relative;
@@ -318,6 +317,10 @@ text-align: center;
 
 .account__header span {
     color: #DD3142;
+}
+
+.account__content .form__action {
+    margin-bottom: 50px;
 }
 
 
